<resources>
    <string name="app_name">Programming_Mobile_Project</string>
    <string name="sottotitolo">Sottotitolo</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="email">Email</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="pubblica">Pubblica</string>
    <string name="descrizione">Descrizione</string>
    <string name="totale_lettini">Tot. lettini</string>
    <string name="totale_ombrelloni">Tot. ombrelloni</string>
    <string name="totale_sdraie">Tot. sdraie</string>
    <string name="tot_sedie">Tot. sedie</string>
    <string name="view_maps">View Maps</string>
    <string name="prenota_mensile">prenota mensile</string>
    <string name="prenota_giornaliero">prenota giornaliero</string>
    <string name="sedie">Sedie</string>
    <string name="sdraio">Sdraio</string>
    <string name="ombrelloni">Ombrelloni</string>
    <string name="lettini">Lettini</string>
    <string name="info">Info</string>
    <string name="immagine_chalet">immagine_chalet</string>
    <string name="messaggio_conferma_prenotazione">Vuoi procedere con la seguente prenotazione?</string>
    <string name="decline">Annulla</string>
    <string name="accept">Si</string>
</resources>