<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@id/textUsername"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@id/textPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAccedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_gravity="center"
        android:textColor="#4FCA45"
        android:text="@string/accedi"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_gravity="center"
        android:text="@string/registrati"
        android:textColor="#4FCA45"
        style="?attr/materialButtonOutlinedStyle"/>

</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>